--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,20 @@
-appdirs==1.4.4
-certifi==2020.6.20
-click==7.1.2
-distlib==0.3.0
-Flask==1.0.2
-Flask-Cors==3.0.7
-gunicorn==20.0.4
-itsdangerous==1.1.0
-Jinja2==2.11.2
-joblib==0.14.1
-MarkupSafe==1.1.1
-numpy==1.19.1
-pandas==1.0.1
-python-dateutil==2.8.1
-pytz==2019.3
-scikit-learn==0.20.3
-scipy==1.1.0
-six==1.14.0
-virtualenv==20.0.21
-Werkzeug==1.0.1
-wincertstore==0.2
-Cython==0.23.4
+blinker==1.7.0
+click==8.1.7
+Flask==3.0.3
+Flask-Cors==4.0.0
+importlib_metadata==7.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.3
+joblib==1.4.0
+MarkupSafe==2.1.5
+numpy==1.26.4
+pandas==2.2.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
+scikit-learn==1.4.2
+scipy==1.13.0
+six==1.16.0
+threadpoolctl==3.4.0
+tzdata==2024.1
+Werkzeug==3.0.2
+zipp==3.18.1
